BE-06 - Eigene Stimme zurueckziehen
